[gd_scene load_steps=17 format=3 uid="uid://dyl1u24g3ijwt"]

[ext_resource type="Script" uid="uid://hetngxyrg1ew" path="res://scenes/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://b02ynnw41oert" path="res://scenes/ball.tscn" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://dqj05fijsqioc" path="res://scenes/cup_visual.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://bwtc2gntnfdlt" path="res://scenes/next_ball_preview.gd" id="4_lbhrr"]
[ext_resource type="Script" uid="uid://bny0un5xte8" path="res://scenes/current_ball_ghost.gd" id="5_iywne"]
[ext_resource type="Script" uid="uid://bux5l6mjthj7l" path="res://scenes/merge_preview.gd" id="5_u5sy4"]
[ext_resource type="FontFile" uid="uid://ccn8nkkjktpb2" path="res://Font/bahnschrift.ttf" id="6_p57ef"]
[ext_resource type="StyleBox" uid="uid://ux2l8gncw7cq" path="res://scenes/button_blue.tres" id="8_0tnpc"]
[ext_resource type="StyleBox" uid="uid://ux2l8gncw7cq" path="res://scenes/button_blue_pressed.tres" id="9_0tnpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cj0n"]
size = Vector2(20, 450)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(380, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_p57ef"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(600, 700)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tnpc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvpfn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtaks"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")
ball_scene = ExtResource("2_yqjtg")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -100000
limit_top = -100000
limit_right = 100000
limit_bottom = 100000
editor_draw_limits = true

[node name="Cup" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/WallLeft"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(-180, 44)
shape = SubResource("RectangleShape2D_8cj0n")
debug_color = Color(1, 1, 1, 1)

[node name="WallRight" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/WallRight"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(180, 44)
shape = SubResource("RectangleShape2D_8cj0n")
debug_color = Color(1, 1, 1, 1)

[node name="Floor" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/Floor"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(0, 260)
shape = SubResource("RectangleShape2D_uwrxv")
debug_color = Color(1, 1, 1, 1)

[node name="CupVisual" type="Node2D" parent="Cup"]
script = ExtResource("3_lnu2h")

[node name="CornerLeft" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/CornerLeft"]
position = Vector2(-180, -180)
shape = SubResource("CircleShape2D_p57ef")
disabled = true

[node name="CornerRight" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/CornerRight"]
position = Vector2(180, -180)
shape = SubResource("CircleShape2D_p57ef")
disabled = true

[node name="GameArea" type="Area2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/GameArea"]
position = Vector2(0, 100)
shape = SubResource("RectangleShape2D_p57ef")

[node name="NextBallPreview" type="Node2D" parent="." node_paths=PackedStringArray("game")]
position = Vector2(260, -220)
script = ExtResource("4_lbhrr")
game = NodePath("..")

[node name="MergePreview" type="Node2D" parent="." node_paths=PackedStringArray("game")]
position = Vector2(329, -73)
script = ExtResource("5_u5sy4")
game = NodePath("..")

[node name="CurrentBallGhost" type="Node2D" parent="." node_paths=PackedStringArray("game")]
script = ExtResource("5_iywne")
game = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
z_index = 100
offset_left = -270.0
offset_top = -400.0
offset_right = -209.0
offset_bottom = -377.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("6_p57ef")
text = "Score: 0"
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = -0.35277778
anchor_top = -0.0921875
anchor_right = 0.37222221
anchor_bottom = 0.082345806
offset_top = -17.0
offset_right = -174.0
offset_bottom = -111.36798
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_p57ef")
text = "GAME OVER"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BestLabel" type="Label" parent="CanvasLayer"]
offset_left = -270.0
offset_top = -500.0
offset_right = -175.0
offset_bottom = -477.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("6_p57ef")
text = "Best: 0"
vertical_alignment = 1

[node name="AimButton" type="Button" parent="CanvasLayer"]
offset_left = -190.0
offset_top = 351.0
offset_right = -115.0
offset_bottom = 426.0
theme_override_fonts/font = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("8_0tnpc")
theme_override_styles/pressed = ExtResource("9_0tnpc")
theme_override_styles/hover = ExtResource("8_0tnpc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0tnpc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvpfn")
text = "Aim"

[node name="RestartButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = -83.0
offset_top = 32.0
offset_right = 86.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("8_0tnpc")
theme_override_styles/pressed = ExtResource("9_0tnpc")
theme_override_styles/hover = ExtResource("8_0tnpc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vtaks")
text = "Restart"

[connection signal="mouse_entered" from="Cup/GameArea" to="." method="_on_game_area_mouse_entered"]
[connection signal="mouse_exited" from="Cup/GameArea" to="." method="_on_game_area_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/AimButton" to="." method="_on_aim_button_pressed"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
